dataset1235/2025-2/2868285114/users/1060082378/executions/3649835072_1927446959.log
== RUN (2025-08-16 00:59:03)
-- CODE: 
n = float(input(2000))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
2000
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
2000
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
2000
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
2000
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2000
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
2000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:09:18)
-- CODE: 
n = float(input(""))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:09:25)
-- CODE: 
n = float(input(""))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:10:09)
-- CODE: 
n = float(input(100))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:03:33)
-- CODE: 
n = int((2000))
m = (n*(27/100))
print(float(m))
print(round(m,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
540.0
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
540.0
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
540.0
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
540.0
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
540.0
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:01:47)
-- CODE: 
n = float(input(2000))
m = (n*(25/100))
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
200030.785
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
20006.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
200081.4
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
2000891.975
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
20001356.55
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
20003.0375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:10:40)
-- CODE: 
n = float(input(500))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:11:26)
-- CODE: 
n = float(input(""))
Porcentagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.561800000000005 2
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25 2
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47199999999998 2
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.123 2
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.694 2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.4955 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:13:50)
-- CODE: 
n = float(input("numero real"))
Porcentagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(round(Porcentagem,2))
print(round(acrescido,2))
print(round(desconto,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:02:09)
-- CODE: 
n = int((2000))
m = (n*(25/100))
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
500.0
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
500.0
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
500.0
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
500.0
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
500.0
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:11:46)
-- CODE: 
n = float(input(500.0))
Porcentagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.561800000000005 2
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25 2
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47199999999998 2
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.123 2
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.694 2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.4955 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:11:33)
-- CODE: 
n = float(input(500))
Porcentagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.561800000000005 2
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25 2
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47199999999998 2
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.123 2
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.694 2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.4955 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:02:44)
-- CODE: 
n = int((2000))
m = (n*(25/100))
print(float(m))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
500.0
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
500.0
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
500.0
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
500.0
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
500.0
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:58:46)
-- CODE: 
n = float(input(x: 2000))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    n = float(input(x: 2000))
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    n = float(input(x: 2000))
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    n = float(input(x: 2000))
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    n = float(input(x: 2000))
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    n = float(input(x: 2000))
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    n = float(input(x: 2000))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:03:41)
-- CODE: 
n = int((2000))
m = (n*(27/100))
print(float(m))
print(round(m,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
540.0
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
540.0
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
540.0
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
540.0
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
540.0
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:12:46)
-- CODE: 
n = float(input("numero real"))
Porcentagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.561800000000005 2
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25 2
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47199999999998 2
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.123 2
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.694 2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.4955 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:09:51)
-- CODE: 
n = float(input(100.0))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:58:56)
-- CODE: 
n = float(input(2000))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
2000
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
2000
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
2000
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
2000
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2000
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
2000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:59:00)
-- CODE: 
n = float(input(2000))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
2000
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
2000
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
2000
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
2000
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2000
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
2000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:02:02)
-- CODE: 
n = int(input(2000))
m = (n*(25/100))
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input(2000))
        ^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input(2000))
        ^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input(2000))
        ^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input(2000))
        ^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input(2000))
        ^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input(2000))
        ^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:12:36)
-- CODE: 
n = float(input("numero real"))
Porcentagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.561800000000005 2
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25 2
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47199999999998 2
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.123 2
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.694 2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.4955 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:01:22)
-- CODE: 
n = float(input(2000))
print(n*(25/100))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
200030.785
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
20006.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
200081.4
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
2000891.975
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
20001356.55
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
20003.0375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:59:00)
-- CODE: 
n = float(input(2000))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
2000
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
2000
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
2000
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
2000
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2000
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
2000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:59:01)
-- CODE: 
n = float(input(2000))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
2000
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
2000
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
2000
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
2000
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2000
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
2000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:10:17)
-- CODE: 
n = float(input(100))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:09:09)
-- CODE: 
n = float(input(""))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:11:43)
-- CODE: 
n = float(input(500.0))
Porcentagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.561800000000005 2
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25 2
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47199999999998 2
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.123 2
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.694 2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.4955 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:11:44)
-- CODE: 
n = float(input(500.0))
Porcentagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.561800000000005 2
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25 2
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47199999999998 2
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.123 2
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.694 2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.4955 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:09:16)
-- CODE: 
n = float(input(""))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:59:48)
-- CODE: 
n = int((2000))
m = (n*(27/100))
print(float(m))
print(round(m,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
540.0
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
540.0
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
540.0
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
540.0
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
540.0
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:08:22)
-- CODE: 
n = float(input(1000.0))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:58:58)
-- CODE: 
n = float(input(2000))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
2000
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
2000
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
2000
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
2000
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2000
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
2000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:13:47)
-- CODE: 
n = float(input("numero real"))
Porcentagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(round(Porcentagem,2))
print(round(acrescido,2))
print(round(desconto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:09:13)
-- CODE: 
n = float(input(""))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:08:55)
-- CODE: 
n = float(input("100.0"))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:12:36)
-- CODE: 
n = float(input("numero real"))
Porcentagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.561800000000005 2
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25 2
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47199999999998 2
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.123 2
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.694 2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.4955 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:08:57)
-- CODE: 
n = float(input("100.0"))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:08:59)
-- CODE: 
n = float(input("100.0"))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:08:20)
-- CODE: 
n = float(input(1000.0))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:07:43)
-- CODE: 
n = float(input("Digite um numero real"))
Porcetagem = n*(27/100)
acrescido = n+(n*42/100)
desconto = n-(n*63/100)
print(Porcentagem,2)
print(acrescido,2)
print(desconto,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Porcentagem,2)
          ^^^^^^^^^^^
NameError: name 'Porcentagem' is not defined. Did you mean: 'Porcetagem'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
